cmake_minimum_required(VERSION 3.24)
project(day04 C)

set(CMAKE_C_STANDARD 99)

add_executable(Remove_Element_27 Remove_Element_27.c)
add_executable(Remove_Duplicates_from_Sorted_Array_26 Remove_Duplicates_from_Sorted_Array_26.c)
add_executable(Check_If_N_and_Its_Double_Exist_1346 Check_If_N_and_Its_Double_Exist_1346.c)
add_executable(Valid_Mountain_Array_941 Valid_Mountain_Array_941.c)
add_executable(Replace_Elements_with_Greatest_Element_on_Right_Side_1299 Replace_Elements_with_Greatest_Element_on_Right_Side_1299.c)